<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_gray"
                app:cardCornerRadius="15dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/cameraBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/take_photo"
                    android:drawableTop="@drawable/round_camera_alt_24"
                    android:text="@string/take_photo"
                    android:layout_margin="10dp"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="UseCompatTextViewDrawableXml" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_gray"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="15dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/galleryBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/gallery"
                    android:drawableTop="@drawable/round_photo_library_24"
                    android:text="@string/gallery"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    tools:ignore="UseCompatTextViewDrawableXml" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/cancel"
            android:textColor="@color/green"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>